# MetalWarriorsSNESRecomp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  snesrecomp
docs/: H2H_STAGE_PROPS.md
recomp/: bank00.cfg  funcs.h
src/: banks.h  config.c  config.h  gen_stubs.c  main.c  mw_cpu_infra.c  mw_rtl.c  mw_rtl.h  mw_spc_player.c  opengl.c  variables.h
tools/: build-linux.sh  regen.sh
